# WLM-slp-world-interpreter

./: README.md  pyproject.toml  setup.cfg
docs/: api.md  mapping-rules.md  overview.md  roadmap.md
examples/: scene_to_slp.md  video_description_to_slp.md  world_state_to_slp.md
src/slp_world_interpreter/: api.py  cli.py  extractor.py  mapper.py  parser.py  slp_emitter.py
tests/: test_emitter.py  test_end_to_end.py  test_extractor.py  test_mapper.py  test_parser.py
