[metadata]
name = slp-world-interpreter
version = 0.1.0
description = Convert natural-language world descriptions into deterministic SLP structural graphs.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = WLM Project
author_email = contact@wlm.ai
url = https://github.com/gavingu2255-ai/WLM-slp-world-interpreter
keywords = SLP, world-model, structural-reasoning, agents, nlp, deterministic-graphs
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src
